Add sos package to allow easy reporting of issues
Signed-off-by: Daniel J Walsh <dwalsh@redhat.com>

--- a/tier-0/bootc.yaml
+++ b/tier-0/bootc.yaml
@@ -2,6 +2,7 @@
 packages:
  - systemd
  - bootc
+ - sos
  # Required by bootc install today, though we'll likely switch bootc to use a Rust crate instead of sgdisk
  - gdisk xfsprogs e2fsprogs dosfstools
 
